fixed commit homework10