@@ -2,14 +2,17 @@ package com.tatchik.cs.homework10.regex;
 
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
-import java.text.SimpleDateFormat;
-import java.util.Date;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 
 /**
@@ -42,45 +45,50 @@ import java.util.concurrent.TimeUnit;
  */
 
 public class SupportServiceEmulator {
-    private static final int MAX_DISPATCHERS = 3;
     private static final String COMPLAINTS_FILE_PATH = "/Users/tv/IdeaProjects/first-application/resources/complaints.txt";
     private static final String CALL_LOG_FILE_PATH = "/Users/tv/IdeaProjects/first-application/resources/callLog.txt";
+    private static final Pattern PHONE_PATTERN = Pattern.compile("(\\d{3})(\\d{2})(\\d{3})(\\d{2})(\\d{2})");
+    private static final int MAX_DISPATCHERS = 3;
 
-    public static void readComplaintsFromFile(String filePath) throws IOException {
-        List<String> lines = Files.readAllLines(Paths.get(filePath));
-        for (String line : lines) {
-            Complaint complaint = ComplaintParser.parseComplaint(line);
-            sendComplaintToDispatcher(complaint);
-        }
+    public static void main(String[] args) {
+        ScheduledExecutorService executor = Executors.newScheduledThreadPool(MAX_DISPATCHERS);
+
+        executor.scheduleAtFixedRate(() -> {
+            try {
+                Path path = Paths.get(COMPLAINTS_FILE_PATH);
+                List<String> lines = Files.readAllLines(path);
+
+                lines.forEach(line -> {
+                    Complaint complaint = ComplaintParser.parseComplaint(line);
+                    logCall(complaint);
+                });
+            } catch (IOException e) {
+                System.err.println("Error reading complaint file: " + e.getMessage());
+            }
+        }, 0, 2, TimeUnit.MINUTES);
     }
-    public static void sendComplaintToDispatcher(Complaint complaint) {
-        // Simulate call handling logic here
-        String callDateTime = new java.text.SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(new java.util.Date());
-        // Now we log the call with the complaint details
-        logCallResult(complaint.getId(), callDateTime, complaint.getPhone(), complaint.getComplaintText());
-    }
 
+    private static void logCall(Complaint complaint) {
+        String formattedPhone = formatPhoneNumber(complaint.getPhone());
+        String logEntry = String.format("%d, %s, %s\n",
+                complaint.getId(),
+                LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")),
+                formattedPhone);
 
-    public static void logCallResult(int id, String callDateTime, String phone, String complaintText) {
-        String logEntry = String.format("%d, %s, %s, \"%s\"\n", id, callDateTime, phone, complaintText);
         try {
-            Files.write(Paths.get(CALL_LOG_FILE_PATH), logEntry.getBytes(), StandardOpenOption.APPEND, StandardOpenOption.CREATE);
+            Files.writeString(Paths.get(CALL_LOG_FILE_PATH), logEntry, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
         } catch (IOException e) {
             System.err.println("Error writing to call log file: " + e.getMessage());
         }
     }
-    public static void main(String[] args) {
-        logCallResult(1, "2024-03-20 12:34:56", "+375 (29) 898-12-13", "Кто-то оборвал мне телефонный кабель");
-        logCallResult(2, "2024-03-21 12:34:59", "+375 (44) 564-13-34", "Почему опять не работает интернет?");
-        logCallResult(3, "2024-03-19 11:35:21", "+375 (25) 121-21-12", "Отключен свет");
-        ScheduledExecutorService executor = Executors.newScheduledThreadPool(MAX_DISPATCHERS);
-        executor.scheduleAtFixedRate(() -> {
-            try {
-                readComplaintsFromFile( COMPLAINTS_FILE_PATH );
-            } catch (IOException e) {
-                System.out.println("Error reading complaint file: " + e.getMessage());
-            }
-        }, 0, 2, TimeUnit.MINUTES);
+
+    private static String formatPhoneNumber(String phone) {
+        Matcher matcher = PHONE_PATTERN.matcher(phone.replaceAll("\\D", ""));
+        if (matcher.matches()) {
+            return String.format("+375 (%s) %s-%s-%s", matcher.group(1), matcher.group(2), matcher.group(3), matcher.group(4), matcher.group(5));
+        }
+        return phone;
     }
 }
+
 
